# studies-algorithms

./: README.md
L1/: CMakeLists.txt  L1Z1.c  L1Z2.c  L1Z2_2.c  L1Z3.c  make  old_L1Z2.c
L2/: CMakeLists.txt  Z1L2.c  Z2L2.c  Z3L2.c  insertion_sort_comps.txt  insertion_sort_swaps.txt  main.c  merge_sort_comps.txt  merge_sort_swaps.txt  plot_generator.py  quick_sort_comps.txt  quick_sort_swaps.txt  sec_merge_sort_comps.txt  sec_merge_sort_impr_comps.txt  sec_merge_sort_impr_swaps.txt  sec_merge_sort_swaps.txt  sec_quick_sort_comps.txt  sec_quick_sort_impr_comps.txt  sec_quick_sort_impr_swaps.txt  sec_quick_sort_swaps.txt  utilities.h
L3/: CMakeLists.txt  Z2_1.c  qs_mm_100_100000.txt  qs_mm_100_100000_max.txt  qs_mm_100_100000_min.txt  qs_rand_100_100000.txt  radix_sort_comps.txt  radix_sort_swaps.txt  select_100_100000.txt  select_100_100000_max.txt  select_100_100000_min.txt  select_5_100.txt  select_5_100_max.txt  select_5_100_min.txt  select_rand_100_100000.txt  select_rand_100_100000_max.txt  select_rand_100_100000_min.txt  select_rand_5_100.txt  select_rand_5_100_max.txt  select_rand_5_100_min.txt  tmp.c
L4/: CMakeLists.txt  main.cpp
L4/Input/: InputInterpreter.cpp  InputParser.cpp  InputParser.h
L4/Plots/: generate.py
L4/Tree/: Tree.cpp  Tree.h  TreeNode.cpp  TreeNode.h
L5/: ED.py  ED2.py  LCS-aver.txt  LCSPlot.py  Tree.py  WP.py  main.py  os-rank-min.txt  os-rank.txt  os-rank2.txt  os-rank3.txt
L6/: README.md  input.txt
problem-set-2/: main.py  sec_plot_generator.py  utilities.c
problem-set-3/: Z1.c  Z2_2.c  Z2_3.c  make
problem-set-5/: LCS.py  (+6 more)
(+78 files in other folders)
